--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>jQuery HighchartTable plugin</title>
     <meta name="description" content="jQuery plugin to transform HTML tables into nice Highcharts graphs">
+	<meta http-equiv="refresh" content="0;url=http://highcharttable.org/">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/prettify.css">
     <link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="canonical" href="http://highcharttable.org/"/>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
